--- a/.gitignore
+++ b/.gitignore
@@ -1,168 +1,64 @@
-# Xcode
-!**/*.xcodeproj
-!**/*.pbxproj
-!**/*.xcworkspacedata
-!**/*.xcsettings
-!**/*.xcscheme
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-project.xcworkspace
-**/.xcode.env.local
-
-# Gradle
-/build/
-/packages/rn-tester/build
-/packages/rn-tester/android/app/.cxx/
-/packages/rn-tester/android/app/build/
-/packages/rn-tester/android/app/gradle/
-/packages/rn-tester/android/app/gradlew
-/packages/rn-tester/android/app/gradlew.bat
-/packages/react-native/ReactAndroid/build/
-/packages/react-native/ReactAndroid/.cxx/
-/packages/react-native/ReactAndroid/gradle/
-/packages/react-native/ReactAndroid/gradlew
-/packages/react-native/ReactAndroid/gradlew.bat
-/packages/react-native/ReactAndroid/external-artifacts/build/
-/packages/react-native/ReactAndroid/external-artifacts/artifacts/
-/packages/react-native/ReactAndroid/hermes-engine/build/
-/packages/react-native/ReactAndroid/hermes-engine/.cxx/
-/packages/helloworld/android/app/build/
-/packages/helloworld/android/build/
-/packages/react-native-popup-menu-android/android/build/
-/packages/react-native-test-library/android/build/
-
-# Buck
-.buckd
-buck-out
-/.lsp.buckd
-/.lsp-buck-out
-/packages/react-native/ReactAndroid/src/main/jni/prebuilt/lib/
-/packages/react-native/ReactAndroid/src/main/gen
-/.cpplsp.buckd
-
-# Android Studio
-.project
-.settings
-.classpath
-
-# Watchman
-.watchmanconfig
-
-# Android
-.idea
-.gradle
-local.properties
-*.iml
-/packages/react-native/android/*
-!/packages/react-native/android/README.md
-.kotlin/
-
-# Node
-node_modules
-*.log
-.nvm
+# Dependencias de Node.js
+node_modules/
 package-lock.json
+yarn.lock
+.pnpm-debug.log*
 
-# OS X
+# Archivos de Expo y React Native
+.expo/
+.expo-shared/
+dist/
+build/
+web-build/
+android/app/build/
+ios/build/
+
+# Configuración de Metro bundler
+.metro/
+metro-cache/
+
+# Archivos de logs y depuración
+*.log
+npm-debug.log*
+yarn-error.log
+debug.log
+
+# Archivos de caché del sistema operativo
 .DS_Store
+Thumbs.db
 
-# Test generated files
-*.js.meta
+# Configuración del editor de código
+.vscode/
+.idea/
+*.swp
 
-/coverage
-/third-party
+# Configuración local de desarrollo
+.env
+.env.local
+.env.development
+.env.production
+.env.test
 
-# Test Reports
-/reports
+# Archivos de Xcode (iOS)
+ios/Pods/
+ios/*.xcodeproj/
+ios/*.xcworkspace/
+xcuserdata/
 
-# Stack Dumps generated when programs crash (Ex. bash.exe.stackdump on Win)
-*.stackdump
+# Archivos de Android Studio (Android)
+android/.gradle/
+android/local.properties
+android/app/.cxx/
+android/app/.externalNativeBuild/
+android/app/build/
 
-# Root dir shouldn't have Xcode project
-/*.xcodeproj
+# Archivos de Firebase y Google Services (proteger claves)
+android/app/google-services.json
+ios/GoogleService-Info.plist
+firebase-debug.log
 
-# ReactCommon subdir shouldn't have Xcode project
-/packages/react-native/ReactCommon/**/*.xcodeproj
-
-# Libs that shouldn't have Xcode project
-/packages/react-native/Libraries/FBLazyVector/**/*.xcodeproj
-/packages/react-native/Libraries/Required/**/*.xcodeproj
-/packages/react-native/React/CoreModules/**/*.xcodeproj
-/packages/react-native/React/FBReactNativeSpec/**/*.xcodeproj
-/packages/react-native-codegen/**/*.xcodeproj
-/packages/rn-tester/**/*.xcodeproj
-
-# Ruby Gems (Bundler)
-/packages/react-native/vendor
-/packages/helloworld/vendor
-.ruby-version
-/**/.ruby-version
-vendor/
-
-# iOS / CocoaPods
-/packages/helloworld/ios/build/
-/packages/helloworld/ios/Pods/
-/packages/helloworld/ios/Podfile.lock
-/packages/rn-tester/Gemfile.lock
-/packages/**/RCTLegacyInteropComponents.mm
-
-# Ignore RNTester specific Pods, but keep the __offline_mirrors__ here.
-/packages/rn-tester/Pods/*
-!/packages/rn-tester/Pods/__offline_mirrors_hermes__
-!/packages/rn-tester/Pods/__offline_mirrors_jsc__
-
-# @react-native/codegen
-/packages/react-native/React/FBReactNativeSpec/
-/packages/react-native-codegen/lib
-/packages/react-native-codegen/tmp/
-/packages/react-native/ReactCommon/react/renderer/components/rncore/
-/packages/rn-tester/NativeModuleExample/ScreenshotManagerSpec*
-/**/RCTThirdPartyFabricComponentsProvider.*
-
-# @react-native/codegen-typescript-test
-/packages/react-native-codegen-typescript-test/lib
-
-# Additional SDKs
-/packages/react-native/sdks/download
-/packages/react-native/sdks/hermes
-/packages/react-native/sdks/hermesc
-/packages/react-native/sdks/hermes-engine/hermes-engine-from-local-source-dir.tar.gz
-
-# iOS prebuilds
-/packages/react-native/third-party/glog
-/packages/react-native/third-party/.swiftpm
-/packages/react-native/third-party/.build
-fix_*.patch
-*.xcframework
-
-# Visual Studio Code (config dir - if present, this merges user defined
-# workspace settings on top of react-native.code-workspace)
-/.vscode
-
-# Visual Studio
-.vs
-
-# Android memory profiler files
-*.hprof
-
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
-
-# Jest Integration
-/packages/react-native-fantom/build/
-
-# [Experimental] Generated TS type definitions
-/packages/**/types_generated/
+# Archivos de cache y generación automática
+*.expo
+*.keystore
+*.p8
+*.pem
