--- a/cliente-movil/app.json
+++ b/cliente-movil/app.json
@@ -18,6 +18,9 @@
       },
       "softwareKeyboardLayoutMode": "pan"
     },
+    "extra": {
+      "backendUrl": "http://192.168.1.11:5000"
+    },
     "web": {
       "bundler": "metro",
       "output": "static",
