--- a/cliente-movil/package.json
+++ b/cliente-movil/package.json
@@ -1,7 +1,10 @@
 {
   "name": "cliente-movil",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "0.0.0",
+  "description": "Cliente móvil del juego Los Hombres Lobo de Castronegro",
+  "author": "Equipo 08 - Roberta Williams",
+  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -9,7 +12,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "docs": "typedoc"
   },
   "jest": {
     "preset": "jest-expo"
@@ -58,6 +62,8 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1",
+    "typedoc": "^0.28.2",
+    "typedoc-plugin-custom-tags": "^1.0.2",
     "typescript": "^5.3.3"
   },
   "private": true
