--- a/cliente-movil/app.json
+++ b/cliente-movil/app.json
@@ -19,7 +19,7 @@
       "softwareKeyboardLayoutMode": "pan"
     },
     "extra": {
-      "backendUrl": "http://albertofsg.ddns.net:5000"
+      "backendUrl": "http://192.168.0.20:5000"
     },
     "web": {
       "bundler": "metro",
