Añadido android.package en app.json

--- a/cliente-movil/app.json
+++ b/cliente-movil/app.json
@@ -47,6 +47,9 @@
     "experiments": {
       "typedRoutes": true
     },
-    "owner": "oscar-gilbe"
+    "owner": "oscar-gilbe",
+    "android": {
+      "package": "com.robertawilliams.clientemovil"
+    }
   }
 }
