--- a/cliente-movil/package.json
+++ b/cliente-movil/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.1",
     "crypto-js": "^4.2.0",
+    "events": "^3.3.0",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
