--- a/.github/workflows/buid-APK.yml
+++ b/.github/workflows/buid-APK.yml
@@ -45,7 +45,7 @@ jobs:
         id: get-url
         working-directory: ./cliente-movil
         run: |
-          URL=$(eas build:list --platform android --status finished --limit 1 --json --non-interactive | jq -r '.[0].artifacts.buildUrl')
+          URL=$(node -p "JSON.parse(require('child_process').execSync('eas build:list --platform android --status finished --limit 1 --json --non-interactive', {encoding: 'utf-8'}))[0].artifacts.buildUrl")
           echo "APK_URL=$URL" >> $GITHUB_ENV
 
       - name: Descargar APK
