--- a/cliente-movil/app.json
+++ b/cliente-movil/app.json
@@ -20,7 +20,7 @@
       "package": "com.robertawilliams.clientemovil"
     },
     "extra": {
-      "backendUrl": "http://albertofsg.ddns.net:5000",
+      "backendUrl": "http://192.168.0.18:5000",
       "router": {
         "origin": false
       },
