--- a/cliente-movil/app.json
+++ b/cliente-movil/app.json
@@ -24,7 +24,9 @@
       "router": {
         "origin": false
       },
-      "eas": {}
+      "eas": {
+        "projectId": "cefa1918-1ddb-4c27-bd75-f3aaa6a59886"
+      }
     },
     "web": {
       "bundler": "metro",
