--- a/cliente-movil/package.json
+++ b/cliente-movil/package.json
@@ -33,6 +33,7 @@
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.22",
@@ -51,8 +52,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "socket.io-client": "^4.8.1",
-    "expo-linear-gradient": "~14.0.2"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -63,6 +63,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
+    "prettier-plugin-import-sort": "^0.0.7",
     "react-test-renderer": "18.3.1",
     "typedoc": "^0.28.2",
     "typedoc-plugin-custom-tags": "^1.0.2",
