--- a/cliente-movil/app.json
+++ b/cliente-movil/app.json
@@ -23,9 +23,6 @@
       "backendUrl": "https://albertofsg.ddns.net:443",
       "router": {
         "origin": false
-      },
-      "eas": {
-        "projectId": "cefa1918-1ddb-4c27-bd75-f3aaa6a59886"
       }
     },
     "web": {
@@ -38,7 +35,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/app-icon.png",
+          "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
