GENERAR APK FINAL >:

--- a/cliente-movil/app.json
+++ b/cliente-movil/app.json
@@ -25,6 +25,9 @@
         "origin": false
       }
     },
+    "eas": {
+      "projectId": "cefa1918-1ddb-4c27-bd75-f3aaa6a59886"
+    },
     "web": {
       "bundler": "metro",
       "output": "static",
